sample-php/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: hotel-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: sample-php-app
          image: ghcr.io/niridoy/sample-php-app:10afde644508861541c11d0c99ff1ea1c39a34bb
          imagePullPolicy: Always
          # imagePullPolicy: IfNotPresent # <-- Only pull if not local
          ports:
            - containerPort: 80
